fix the bottun position

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                 placeholder="e.g:Test1234"
                 required>
         <p id="login">You already have an accaont? <a href="#">Login</a></p>
-        <button type="submit">Sign in</button>
+        <div class="cont">
+            <button type="submit">Sign in</button>
+        </div>
+        
         </form>
     <script src="./script.js"></script>
 </body>
